AC_INIT( src/LaunchPadApp.cpp )

dnl Check for BeOS R4
AC_MSG_CHECKING( [BeOS Release] )
release=[$(uname -r | sed 's/\([^\.]*\)\..*/\1/')]
case "$release" in
	5)
		AC_MSG_RESULT( [post-R4] )
		;;
	4)
		AC_MSG_RESULT( [post-R4] )
		;;
	*)
		AC_MSG_RESULT( [not R4] )
		AC_MSG_ERROR( [BeOS Release 4 is required] )
		;;
esac

dnl -------------------------------------------------------------------
dnl Check for libprefs source distribution
dnl -------------------------------------------------------------------
AC_ARG_WITH( libprefs, [ --with-libprefs=PATH	path to the libprefs distribution ] )
AC_MSG_CHECKING( [libprefs] )
if test "x$with_libprefs" = "x"; then
	AC_MSG_ERROR( [specify --with-libprefs=PATH] )
else
	if ( echo $with_libprefs | grep '^\/' ); then
		LIBPREFSDIR=$with_libprefs
	else
		LIBPREFSDIR=$(pwd)/$with_libprefs
	fi
fi
AC_MSG_RESULT( $LIBPREFSDIR )
if ! test -d $LIBPREFSDIR; then
	AC_MSG_ERROR( [couldn't find $LIBPREFSDIR] )
fi
AC_SUBST(LIBPREFSDIR)

AC_OUTPUT( config.h Makefile src/Makefile )

