dnl $Id: configure.in,v 1.8 2000/07/16 08:03:05 hiromasa Exp $
AC_INIT( src/LaunchPadApp.cpp )
AC_CONFIG_AUX_DIR( config )
AC_CANONICAL_HOST

dnl AC_PROG_CC
dnl AC_PROG_CXX

dnl -------------------------------------------------------------------
dnl Check for architecture
dnl -------------------------------------------------------------------
case $host_cpu in
	i586|i386)
		CPU=x86
		;;
	ppc|powerpc)
		CPU=ppc
		;;
esac
AC_SUBST(CPU)

dnl -------------------------------------------------------------------
dnl Check for libprefs source distribution
dnl -------------------------------------------------------------------
AC_ARG_WITH( libprefs, [ --with-libprefs=PATH	path to the libprefs distribution ] )
AC_MSG_CHECKING( [libprefs] )
if test "x$with_libprefs" = "x"; then
	AC_MSG_ERROR( [specify --with-libprefs=PATH] )
else
	if ( echo $with_libprefs | grep '^\/' ); then
		LIBPREFSDIR=$with_libprefs
	else
		LIBPREFSDIR=$(pwd)/$with_libprefs
	fi
fi
AC_MSG_RESULT( $LIBPREFSDIR )
if ! test -d $LIBPREFSDIR; then
	AC_MSG_ERROR( [couldn't find $LIBPREFSDIR] )
fi
AC_SUBST(LIBPREFSDIR)

dnl ------------------------------------------------------------------
dnl Version info
dnl ------------------------------------------------------------------

VERSION_MAJOR=1
VERSION_MIDDLE=3
VERSION_MINOR=1
VERSION_VARIETY=
VERSION_INTERNAL=
VERSION_STRING=$VERSION_MAJOR.$VERSION_MIDDLE.$VERSION_MINOR$VERSION_VARIETY$VERSION_INTERNAL

AC_DEFINE_UNQUOTED(LAUNCHPAD_VERSION_MAJOR, $VERSION_MAJOR)
AC_DEFINE_UNQUOTED(LAUNCHPAD_VERSION_MIDDLE, $VERSION_MIDDLE)
AC_DEFINE_UNQUOTED(LAUNCHPAD_VERSION_MINOR, $VERSION_MINOR)
AC_DEFINE_UNQUOTED(LAUNCHPAD_VERSION_VARIETY, $VERSION_VARIETY)
AC_DEFINE_UNQUOTED(LAUNCHPAD_VERSION_INTERNAL, $VERSION_INTERNAL)
AC_SUBST(VERSION_MAJOR)
AC_SUBST(VERSION_MIDDLE)
AC_SUBST(VERSION_MINOR)
AC_SUBST(VERSION_VARIETY)
AC_SUBST(VERSION_INTERNAL)
AC_SUBST(VERSION_STRING)

AC_CONFIG_HEADER(config/config.h)
AC_OUTPUT(Makefile.header Makefile src/Makefile)

